Updated CSS for uniformity, added shared navbar component, and fixed record transaction page issues

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
       <li><a href="/profit-loss">Profit & Loss</a></li>
       <li><a href="/record-transaction">Record Transaction</a></li>
     </ul>
-    <div class="navbar-toggle" id="navbar-toggle" (click)="toggleDrawer()">
+    <div class="navbar-toggle" id="navbar-toggle">
       <span></span>
       <span></span>
       <span></span>
