--- a/src/app/record-transaction/record-transaction.component.html
+++ b/src/app/record-transaction/record-transaction.component.html
@@ -18,4 +18,5 @@
   <input type="number" id="amount" [(ngModel)]="transaction.amount" name="amount" required>
   <br>
   <button type="submit">Record Transaction</button>
+  <button type="reset" (click)="resetForm()">Reset</button>
 </form>
