--- a/src/app/record-transaction/record-transaction.component.html
+++ b/src/app/record-transaction/record-transaction.component.html
@@ -14,8 +14,25 @@
   <label for="description">Description:</label>
   <input type="text" id="description" [(ngModel)]="transaction.description" name="description" required>
   <br>
+  <label for="weight">Weight:</label>
+  <input type="number" id="weight" [(ngModel)]="transaction.weight" name="weight" (input)="calculateAmount()" required>
+  <br>
+  <label for="rate">Rate:</label>
+  <input type="number" id="rate" [(ngModel)]="transaction.rate" name="rate" (input)="calculateAmount()" required>
+  <br>
+  <label for="purity">Purity (%):</label>
+  <input type="number" id="purity" [(ngModel)]="transaction.purity" name="purity" (input)="calculateAmount()" required>
+  <br>
   <label for="amount">Amount:</label>
-  <input type="number" id="amount" [(ngModel)]="transaction.amount" name="amount" required>
+  <input type="number" id="amount" [(ngModel)]="transaction.amount" name="amount" readonly>
+  <br>
+  <label for="cashTaken">Cash Taken:</label>
+  <input type="number" id="cashTaken" [(ngModel)]="transaction.cashTaken" name="cashTaken">
+  <br>
+  <label for="cashGiven">Cash Given:</label>
+  <input type="number" id="cashGiven" [(ngModel)]="transaction.cashGiven" name="cashGiven">
+  <br>
+  <button type="button" (click)="checkParty()">Check Party</button>
   <br>
   <button type="submit">Record Transaction</button>
   <button type="reset" (click)="resetForm()">Reset</button>
