--- a/src/app/record-transaction/record-transaction.component.html
+++ b/src/app/record-transaction/record-transaction.component.html
@@ -8,7 +8,7 @@
   </div>
   <br>
   <label for="party">Party:</label>
-  <ng-select [items]="parties" bindLabel="name" [(ngModel)]="transaction.party" name="party" [searchable]="true" (add)="onAddParty()">
+  <ng-select [items]="parties" bindLabel="name" [formControl]="partyControl" name="party" [searchable]="true" (add)="onAddParty()">
   </ng-select>
   <br>
   <label for="description">Description:</label>
@@ -32,7 +32,7 @@
   <label for="cashGiven">Cash Given:</label>
   <input type="number" id="cashGiven" [(ngModel)]="transaction.cashGiven" name="cashGiven">
   <br>
-  <button type="button" (click)="checkParty()">Check Party</button>
+  <button type="button" (click)="checkParty(partyControl.value)">Check Party</button>
   <br>
   <button type="submit">Record Transaction</button>
   <button type="reset" (click)="resetForm()">Reset</button>
