Added accTransaction component and updated record-transaction component with Account button

--- a/src/app/record-transaction/record-transaction.component.html
+++ b/src/app/record-transaction/record-transaction.component.html
@@ -38,4 +38,5 @@
 
   <button type="submit">Record Transaction</button>
   <button type="reset" (click)="resetForm()">Reset</button>
+  <button type="button" (click)="navigateToAccTransaction()">Account</button>
 </form>
