--- a/src/app/acc-transaction/acc-transaction.component.css
+++ b/src/app/acc-transaction/acc-transaction.component.css
@@ -7,6 +7,7 @@ form {
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
+    box-sizing: border-box;
 }
 
 label {
@@ -21,6 +22,7 @@ input, ng-select {
     margin-bottom: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    box-sizing: border-box;
 }
 
 button {
@@ -31,6 +33,7 @@ button {
     color: white;
     cursor: pointer;
     margin-right: 10px;
+    box-sizing: border-box;
 }
 
 button.active {
@@ -61,6 +64,7 @@ button[type="reset"]:hover {
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #ffffff; /* Add background color */
+    box-sizing: border-box;
 }
 
 .ng-select .ng-select-container {
@@ -69,8 +73,10 @@ button[type="reset"]:hover {
 
 .ng-select .ng-select-container .ng-value-container {
     padding: 8px;
+    box-sizing: border-box;
 }
 
 .ng-select .ng-select-container .ng-input {
     padding: 8px;
+    box-sizing: border-box;
 }
