--- a/src/app/acc-transaction/acc-transaction.component.html
+++ b/src/app/acc-transaction/acc-transaction.component.html
@@ -1,34 +1,36 @@
-
 <div class="acc-transaction">
   <h2>Account Transaction</h2>
-  <button type="button" [class.active]="transaction.type === 'sale'" (click)="setTransactionType('sale'); resetForm()">Sale</button>
-  <button type="button" [class.active]="transaction.type === 'purchase'" (click)="setTransactionType('purchase'); resetForm()">Purchase</button>
-  <button type="button" (click)="navigateToAccTransaction(); resetForm()">Account</button>
-  <br>
-  <button type="button" [class.active]="transaction.subType === 'metal'" (click)="setSubType('metal')">Metal</button>
-  <button type="button" [class.active]="transaction.subType === 'cash'" (click)="setSubType('cash')">Cash</button>
-  <br>
-  <button type="button" [class.active]="transaction.action === 'given'" (click)="setAction('given')">Given</button>
-  <button type="button" [class.active]="transaction.action === 'taken'" (click)="setAction('taken')">Taken</button>
-  <br>
-  <label for="party">Party:</label>
-  <ng-select [items]="parties" bindLabel="name" [formControl]="partyControl" name="party" [searchable]="true" (add)="onAddParty()">
-  </ng-select>
-  <br>
-  <div *ngIf="transaction.subType === 'metal'">
-    <label for="weight">Weight:</label>
-    <input type="number" id="weight" [(ngModel)]="transaction.weight" name="weight" required>
+  <form (ngSubmit)="onSubmit($event)">
+    <button type="button" [class.active]="transaction.type === 'sale'" (click)="setTransactionType('sale'); resetForm()">Sale</button>
+    <button type="button" [class.active]="transaction.type === 'purchase'" (click)="setTransactionType('purchase'); resetForm()">Purchase</button>
+    <button type="button" (click)="navigateToAccTransaction(); resetForm()">Account</button>
     <br>
-    <label for="purity">Purity (%):</label>
-    <input type="number" id="purity" [(ngModel)]="transaction.purity" name="purity" required>
-  </div>
-  <div *ngIf="transaction.subType === 'cash'">
-    <label *ngIf="transaction.action === 'given'" for="cashGiven">Cash Given:</label>
-    <input *ngIf="transaction.action === 'given'" type="number" id="cashGiven" [(ngModel)]="transaction.cashGiven" name="cashGiven">
-    <label *ngIf="transaction.action === 'taken'" for="cashTaken">Cash Taken:</label>
-    <input *ngIf="transaction.action === 'taken'" type="number" id="cashTaken" [(ngModel)]="transaction.cashTaken" name="cashTaken">
-  </div>
-  <br>
-  <button type="submit">Record Transaction</button>
-  <button type="reset" (click)="resetForm()">Reset</button>
+    <button type="button" [class.active]="transaction.subType === 'metal'" (click)="setSubType('metal')">Metal</button>
+    <button type="button" [class.active]="transaction.subType === 'cash'" (click)="setSubType('cash')">Cash</button>
+    <br>
+    <button type="button" [class.active]="transaction.action === 'given'" (click)="setAction('given')">Given</button>
+    <button type="button" [class.active]="transaction.action === 'taken'" (click)="setAction('taken')">Taken</button>
+    <br>
+    <label for="party">Party:</label>
+    <ng-select [items]="parties" bindLabel="name" [formControl]="partyControl" name="party" [searchable]="true" (add)="onAddParty()">
+    </ng-select>
+    <br>
+    <div *ngIf="transaction.subType === 'metal'">
+      <label for="weight">Weight:</label>
+      <input type="number" id="weight" [(ngModel)]="transaction.weight" name="weight" required>
+      <br>
+      <label for="purity">Purity (%):</label>
+      <input type="number" id="purity" [(ngModel)]="transaction.purity" name="purity" required>
+      
+    </div>
+    <div *ngIf="transaction.subType === 'cash'">
+      <label *ngIf="transaction.action === 'given'" for="cashGiven">Cash Given:</label>
+      <input *ngIf="transaction.action === 'given'" type="number" id="cashGiven" [(ngModel)]="transaction.cashGiven" name="cashGiven">
+      <label *ngIf="transaction.action === 'taken'" for="cashTaken">Cash Taken:</label>
+      <input *ngIf="transaction.action === 'taken'" type="number" id="cashTaken" [(ngModel)]="transaction.cashTaken" name="cashTaken">
+    </div>
+    <br>
+    <button type="submit">Record Transaction</button>
+    <button type="reset" (click)="resetForm()">Reset</button>
+  </form>
 </div>
