--- a/src/app/acc-transaction/acc-transaction.component.css
+++ b/src/app/acc-transaction/acc-transaction.component.css
@@ -62,7 +62,7 @@ button[type="reset"]:hover {
 .ng-select {
     border: 1px solid #ccc;
     border-radius: 4px;
-    background-color: #ffffff; /* Add background color */
+    background-color: rgba(255, 255, 255, 1); /* Add dark full opaque white background */
     z-index: 1000; /* Ensure dropdown is above other elements */
     margin-bottom: 20px; /* Add margin to prevent overlap */
     position: relative; /* Ensure correct positioning */
