--- a/src/app/acc-transaction/acc-transaction.component.css
+++ b/src/app/acc-transaction/acc-transaction.component.css
@@ -21,6 +21,11 @@ input, ng-select {
     margin-bottom: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 1); /* Add dark full opaque white background */
+    z-index: 1000; /* Ensure dropdown is above other elements */
+    margin-bottom: 20px; /* Add margin to prevent overlap */
+    position: relative; /* Ensure correct positioning */
 }
 
 button {
