--- a/src/app/acc-transaction/acc-transaction.component.html
+++ b/src/app/acc-transaction/acc-transaction.component.html
@@ -1,6 +1,6 @@
 <div class="acc-transaction">
   <h2>Account Transaction</h2>
-  <form (ngSubmit)="onSubmit($event)">
+<form #accTransactionForm="ngForm" (ngSubmit)="onSubmit(accTransactionForm)">
     <button type="button" [class.active]="transaction.type === 'sale'" (click)="setTransactionType('sale'); resetForm()">Sale</button>
     <button type="button" [class.active]="transaction.type === 'purchase'" (click)="setTransactionType('purchase'); resetForm()">Purchase</button>
     <button type="button" [class.active]="transaction.type === 'account'" >Account</button>
@@ -16,11 +16,13 @@
     </ng-select>
     <br>
     <div *ngIf="transaction.subType === 'metal'">
-      <label for="weight">Weight:</label>
-      <input type="number" id="weight" [(ngModel)]="transaction.weight" name="weight" required>
-      <br>
-      <label for="purity">Purity (%):</label>
-      <input type="number" id="purity" [(ngModel)]="transaction.purity" name="purity" required>
+  <label for="weight">Weight:</label>
+  <input type="number" id="weight" [(ngModel)]="transaction.weight" name="weight" required>
+  <div *ngIf="!transaction.weight && accTransactionForm.submitted" class="error">Weight is required.</div>
+  <br>
+  <label for="purity">Purity (%):</label>
+  <input type="number" id="purity" [(ngModel)]="transaction.purity" name="purity" required>
+  <div *ngIf="!transaction.purity && accTransactionForm.submitted" class="error">Purity is required.</div>
       
     </div>
     <div *ngIf="transaction.subType === 'cash'">
