--- a/src/app/record-transaction/record-transaction.component.html
+++ b/src/app/record-transaction/record-transaction.component.html
@@ -1,6 +1,6 @@
 
 <h1>Record Transaction</h1>
-<form (ngSubmit)="onSubmit($event)">
+<form #recordTransactionForm="ngForm" (ngSubmit)="onSubmit(recordTransactionForm)">
   <label for="type">Transaction Type:</label>
   <div>
     <button type="button" [class.active]="transaction.type === 'sale'" (click)="setTransactionType('sale')">Sale</button>
@@ -14,15 +14,19 @@
   <br>
   <label for="description">Description:</label>
   <input type="text" id="description" [(ngModel)]="transaction.description" name="description" required>
+  <div *ngIf="!transaction.description && recordTransactionForm.submitted" class="error">Description is required.</div>
   <br>
   <label for="weight">Weight:</label>
   <input type="number" id="weight" [(ngModel)]="transaction.weight" name="weight" (input)="calculateAmount()" required>
+  <div *ngIf="!transaction.weight && recordTransactionForm.submitted" class="error">Weight is required.</div>
   <br>
   <label for="rate">Rate:</label>
   <input type="number" id="rate" [(ngModel)]="transaction.rate" name="rate" (input)="calculateAmount()" required>
+  <div *ngIf="!transaction.rate && recordTransactionForm.submitted" class="error">Rate is required.</div>
   <br>
   <label for="purity">Purity (%):</label>
   <input type="number" id="purity" [(ngModel)]="transaction.purity" name="purity" (input)="calculateAmount()" required>
+  <div *ngIf="!transaction.purity && recordTransactionForm.submitted" class="error">Purity is required.</div>
   <br>
   <label for="amount">Amount:</label>
   <input type="number" id="amount" [(ngModel)]="transaction.amount" name="amount" readonly>
