Added form validation and default purity value to record-transaction and acc-transaction components

--- a/src/app/acc-transaction/acc-transaction.component.html
+++ b/src/app/acc-transaction/acc-transaction.component.html
@@ -11,17 +11,25 @@
     <button type="button" [class.active]="transaction.action === 'given'" (click)="setAction('given')">Given</button>
     <button type="button" [class.active]="transaction.action === 'taken'" (click)="setAction('taken')">Taken</button>
     <br>
-    <label for="party">Party:</label>
-    <ng-select [items]="parties" bindLabel="name" [formControl]="partyControl" name="party" [searchable]="true" (add)="onAddParty()">
-    </ng-select>
-    <br>
-    <div *ngIf="transaction.subType === 'metal'">
+  <label for="type">Transaction Type:</label>
+  <div>
+    <button type="button" [class.active]="transaction.type === 'sale'" (click)="setTransactionType('sale'); resetForm()">Sale</button>
+    <button type="button" [class.active]="transaction.type === 'purchase'" (click)="setTransactionType('purchase'); resetForm()">Purchase</button>
+    <button type="button" [class.active]="transaction.type === 'account'" >Account</button>
+  </div>
+  <div *ngIf="!transaction.type && accTransactionForm.submitted" class="error">Transaction type is required.</div>
+  <br>
+  <label for="party">Party:</label>
+  <ng-select [items]="parties" bindLabel="name" [formControl]="partyControl" name="party" [searchable]="true" (add)="onAddParty()">
+  </ng-select>
+  <div *ngIf="!transaction.party && accTransactionForm.submitted" class="error">Party is required.</div>
+  <br>
   <label for="weight">Weight:</label>
   <input type="number" id="weight" [(ngModel)]="transaction.weight" name="weight" required>
   <div *ngIf="!transaction.weight && accTransactionForm.submitted" class="error">Weight is required.</div>
   <br>
   <label for="purity">Purity (%):</label>
-  <input type="number" id="purity" [(ngModel)]="transaction.purity" name="purity" required>
+  <input type="number" id="purity" [(ngModel)]="transaction.purity" name="purity" required min="0.00" max="100.00">
   <div *ngIf="!transaction.purity && accTransactionForm.submitted" class="error">Purity is required.</div>
       
     </div>
